# nantrobot-rpi

./: .gitignore  .gitmodules  README.md  reset_pose_purple.sh  root_launch.launch  ros.sh  start_remote_desktop.sh  test_AbsLoc.launch  test_hokuyo.launch  test_teensy.launch
catkin_ws/src/absolute_location/: CMakeLists.txt  package.xml
catkin_ws/src/absolute_location/include/libabsolute_location/: matrix.h
catkin_ws/src/absolute_location/src/: absolute_location.cpp  technique1to4
catkin_ws/src/joy_controller/: CMakeLists.txt  package.xml  package.xml.save
catkin_ws/src/joy_controller/DataSheet/: DataSheet.tex
catkin_ws/src/joy_controller/launch/: UarmJoystickControl.launch  joy_robo.launch
catkin_ws/src/joy_controller/msg/: joystick.msg
catkin_ws/src/joy_controller/src/: joy_robo.cpp
catkin_ws/src/map_server/: map_server.launch  map_server_conf.yaml
catkin_ws/src/motion_planning/: CMakeLists.txt  mapgen.m  package.xml
catkin_ws/src/motion_planning/include/motion_planning/: wavefrontROS.h
catkin_ws/src/motion_planning/src/: map_green.txt  map_purple.txt  motion_planning_node.cpp  wavefrontROS.cpp
catkin_ws/src/state_machine/: CMakeLists.txt  package.xml
catkin_ws/src/state_machine/include/: StateMachine.h
catkin_ws/src/state_machine/src/: StateMachine.cpp  mainmachine.cpp
