<?xml version="1.0"?>
<package>
  <name>joy_controller</name>
  <version>0.1.0</version>
  <description>The joy_controller package</description>

  <maintainer email="spam.dario@gmail.com">dario</maintainer>

  <license>LGPLv3</license>

  <!-- <url type="website">http://wiki.ros.org/joy_controller</url> -->

  <author email="spam.dario@gmail.com">Dario PALMA</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>

</package>
